packaging configurations for RC2